# Job-Scraper

./: .env.example  .gitignore  Cargo.toml  README.md
src/: email.rs  main.rs  scraper.rs  template.html
