[package]
name = "job_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
scraper = "0.20"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }